@@ -10,11 +10,14 @@ import static com.evolveum.midpoint.gui.api.util.WebComponentUtil.dispatchToObje
 
 import java.util.*;
 import java.util.Objects;
+import java.util.stream.Collectors;
 import javax.xml.datatype.XMLGregorianCalendar;
 import javax.xml.namespace.QName;
 
 import com.evolveum.midpoint.gui.api.util.GuiDisplayTypeUtil;
 import com.evolveum.midpoint.prism.*;
+import com.evolveum.midpoint.schema.util.cases.ApprovalContextUtil;
+import com.evolveum.midpoint.schema.util.cases.CaseTypeUtil;
 import com.evolveum.midpoint.schema.util.task.work.ResourceObjectSetUtil;
 import com.evolveum.midpoint.web.page.admin.orgs.PageOrgUnit;
 import com.evolveum.midpoint.web.util.OnePageParameterEncoder;
@@ -33,10 +36,7 @@ import org.apache.wicket.extensions.markup.html.repeater.data.table.export.Abstr
 import org.apache.wicket.markup.html.basic.Label;
 import org.apache.wicket.markup.repeater.Item;
 import org.apache.wicket.markup.repeater.RepeatingView;
-import org.apache.wicket.model.IModel;
-import org.apache.wicket.model.Model;
-import org.apache.wicket.model.PropertyModel;
-import org.apache.wicket.model.StringResourceModel;
+import org.apache.wicket.model.*;
 
 import com.evolveum.midpoint.gui.api.GuiStyleConstants;
 import com.evolveum.midpoint.gui.api.page.PageBase;
@@ -60,7 +60,7 @@ import com.evolveum.midpoint.web.component.util.SelectableBeanImpl;
 import com.evolveum.midpoint.web.page.admin.server.dto.ApprovalOutcomeIcon;
 import com.evolveum.midpoint.web.page.admin.server.dto.OperationResultStatusPresentationProperties;
 import com.evolveum.midpoint.web.util.TooltipBehavior;
-import com.evolveum.midpoint.wf.util.ApprovalUtils;
+import com.evolveum.midpoint.schema.util.cases.ApprovalUtils;
 import com.evolveum.midpoint.xml.ns._public.common.common_3.*;
 
 import org.apache.wicket.request.mapper.parameter.PageParameters;
@@ -408,35 +408,7 @@ public class ColumnUtils {
 
             @Override
             public void populateItem(Item<ICellPopulator<SelectableBean<T>>> cellItem, String componentId, IModel<SelectableBean<T>> rowModel) {
-                RepeatingView links = new RepeatingView(componentId);
-                if (rowModel != null && rowModel.getObject() != null && rowModel.getObject().getValue() != null
-                        && rowModel.getObject().getValue().getParentOrgRef() != null && !rowModel.getObject().getValue().getParentOrgRef().isEmpty()) {
-                    for (ObjectReferenceType parentRef : rowModel.getObject().getValue().getParentOrgRef()) {
-                        if (parentRef.getOid() == null) {
-                            continue;
-                        }
-                        Model name = Model.of(WebModelServiceUtils.resolveReferenceName(parentRef, pageBase, true));
-                        if (name.getObject() == null) {
-                            continue;
-                        }
-                        links.add(new LinkPanel(links.newChildId(), name) {
-                            private static final long serialVersionUID = 1L;
-
-                            @Override
-                            public void onClick() {
-                                PageParameters parameters = new PageParameters();
-                                parameters.add(OnePageParameterEncoder.PARAMETER, parentRef.getOid());
-                                pageBase.navigateToNext(PageOrgUnit.class, parameters);
-                            }
-
-                            @Override
-                            public boolean isEnabled() {
-                                return parentRef.getTargetName() != null;
-                            }
-                        });
-                    }
-                }
-                cellItem.add(links);
+                createParentOrgColumn(cellItem, componentId, rowModel, pageBase);
             }
 
             @Override
@@ -447,6 +419,63 @@ public class ColumnUtils {
 
         columns.add((IColumn) getAbstractRoleColumnForProjection());
         return columns;
+    }
+
+    private static <T extends ObjectType> void createParentOrgColumn(Item<ICellPopulator<SelectableBean<T>>> cellItem, String componentId, IModel<SelectableBean<T>> rowModel, PageBase pageBase) {
+        RepeatingView links = new RepeatingView(componentId);
+        cellItem.add(links);
+
+        List<ObjectReferenceType> parentOrgRefs = getParentOrgRefs(rowModel);
+        for (ObjectReferenceType parentRef : parentOrgRefs) {
+            LinkPanel parentOrgLinkPanel = createParentOrgLink(links.newChildId(), parentRef, pageBase);
+            if (parentOrgLinkPanel == null) {
+                continue;
+            }
+            links.add(parentOrgLinkPanel);
+        }
+    }
+
+    private static <T extends ObjectType> List<ObjectReferenceType> getParentOrgRefs(IModel<SelectableBean<T>> rowModel) {
+        if (rowModel == null) {
+            return null;
+        }
+
+        SelectableBean<T> bean = rowModel.getObject();
+        if (bean == null) {
+            return null;
+        }
+        T object = bean.getValue();
+        if (object == null) {
+            return null;
+        }
+        return object.getParentOrgRef();
+    }
+
+    private static LinkPanel createParentOrgLink(String id, ObjectReferenceType parentRef, PageBase pageBase) {
+        String parentOrgOid = parentRef.getOid();
+        if (parentOrgOid == null) {
+            return null;
+        }
+        Model name = Model.of(WebModelServiceUtils.resolveReferenceName(parentRef, pageBase, true));
+        if (name.getObject() == null) {
+            return null;
+        }
+
+        return new LinkPanel(id, name) {
+            private static final long serialVersionUID = 1L;
+
+            @Override
+            public void onClick() {
+                PageParameters parameters = new PageParameters();
+                parameters.add(OnePageParameterEncoder.PARAMETER, parentOrgOid);
+                pageBase.navigateToNext(PageOrgUnit.class, parameters);
+            }
+
+            @Override
+            public boolean isEnabled() {
+                return name.getObject() != null;
+            }
+        };
     }
 
     public static <T extends ObjectType> List<IColumn<SelectableBean<T>, String>> getDefaultArchetypeColumns() {
@@ -571,7 +600,7 @@ public class ColumnUtils {
                 CaseWorkItemType caseWorkItemType = unwrapRowModel(rowModel);
                 CaseType caseType = CaseTypeUtil.getCase(caseWorkItemType);
                 String name;
-                AssignmentHolderType object = WebComponentUtil.getObjectFromAddDeltyForCase(caseType);
+                AssignmentHolderType object = WebComponentUtil.getObjectFromAddDeltaForCase(caseType);
                 if (object == null) {
                     name = WebModelServiceUtils.resolveReferenceName(caseType.getObjectRef(), pageBase, true);
                 } else {
@@ -593,7 +622,7 @@ public class ColumnUtils {
                     final IModel<PrismContainerValueWrapper<CaseWorkItemType>> rowModel) {
                 CaseWorkItemType caseWorkItemType = unwrapRowModel(rowModel);
                 CaseType caseType = CaseTypeUtil.getCase(caseWorkItemType);
-                AssignmentHolderType object = WebComponentUtil.getObjectFromAddDeltyForCase(caseType);
+                AssignmentHolderType object = WebComponentUtil.getObjectFromAddDeltaForCase(caseType);
                 if (object == null) {
                     super.populateItem(cellItem, componentId, rowModel);
                 } else {
@@ -758,37 +787,41 @@ public class ColumnUtils {
         IColumn column = new PropertyColumn(createStringResource("pageCases.table.description"), "value.description");
         columns.add(column);
 
-        column = new AbstractColumn<SelectableBean<CaseType>, String>(createStringResource("pageCases.table.objectRef")) {
+        column = new AbstractExportableColumn<SelectableBean<CaseType>, String>(createStringResource("pageCases.table.objectRef")) {
             @Override
-            public void populateItem(Item<ICellPopulator<SelectableBean<CaseType>>> item, String componentId, IModel<SelectableBean<CaseType>> rowModel) {
-                item.add(new Label(componentId, new IModel<String>() {
-                    @Override
-                    public String getObject() {
-                        CaseType caseModelObject = rowModel.getObject().getValue();
-                        if (caseModelObject == null) {
-                            return "";
-                        }
-                        AssignmentHolderType objectRef = WebComponentUtil.getObjectFromAddDeltyForCase(caseModelObject);
-                        if (objectRef != null) {
-                            return WebComponentUtil.getEffectiveName(objectRef, AbstractRoleType.F_DISPLAY_NAME);
-                        } else if (caseModelObject.getObjectRef() != null
-                                && StringUtils.isNotEmpty(caseModelObject.getObjectRef().getOid())) {
-                            if (caseModelObject.getObjectRef().getObject() != null) {
-                                return WebComponentUtil.getEffectiveName(caseModelObject.getObjectRef().getObject(),
-                                        AbstractRoleType.F_DISPLAY_NAME);
-                            } else {
-                                try {
-                                    return WebComponentUtil.getEffectiveName(caseModelObject.getObjectRef(), AbstractRoleType.F_DISPLAY_NAME, pageBase,
-                                            pageBase.getClass().getSimpleName() + "." + "loadCaseObjectRefName");
-                                } catch (Exception ex) {
-                                    LOGGER.error("Unable find the object for reference: {}", caseModelObject.getObjectRef());
-                                }
-                            }
-                        }
+            public IModel<?> getDataModel(IModel<SelectableBean<CaseType>> iModel) {
+                return (IModel<String>) () -> {
+                    CaseType caseModelObject = iModel.getObject().getValue();
+                    if (caseModelObject == null) {
                         return "";
                     }
-                }));
+                    AssignmentHolderType objectRef = WebComponentUtil.getObjectFromAddDeltaForCase(caseModelObject);
+                    if (objectRef != null) {
+                        return WebComponentUtil.getEffectiveName(objectRef, AbstractRoleType.F_DISPLAY_NAME);
+                    } else if (caseModelObject.getObjectRef() != null
+                            && StringUtils.isNotEmpty(caseModelObject.getObjectRef().getOid())) {
+                        if (caseModelObject.getObjectRef().getObject() != null) {
+                            return WebComponentUtil.getEffectiveName(caseModelObject.getObjectRef().getObject(),
+                                    AbstractRoleType.F_DISPLAY_NAME);
+                        } else {
+                            try {
+                                return WebComponentUtil.getEffectiveName(caseModelObject.getObjectRef(), AbstractRoleType.F_DISPLAY_NAME, pageBase,
+                                        pageBase.getClass().getSimpleName() + "." + "loadCaseObjectRefName");
+                            } catch (Exception ex) {
+                                LOGGER.error("Unable find the object for reference: {}", caseModelObject.getObjectRef());
+                            }
+                        }
+                    }
+                    return "";
+                };
             }
+
+            @Override
+            public void populateItem(Item<ICellPopulator<SelectableBean<CaseType>>> item, String componentId, IModel<SelectableBean<CaseType>> rowModel) {
+                item.add(new Label(componentId, getDataModel(rowModel)));
+            }
+
+
         };
         columns.add(column);
 
@@ -805,23 +838,8 @@ public class ColumnUtils {
             @Override
             public void populateItem(Item<ICellPopulator<SelectableBean<CaseType>>> cellItem,
                     String componentId, final IModel<SelectableBean<CaseType>> rowModel) {
-                CaseType object = rowModel.getObject().getValue();
-                MetadataType metadata = object != null ? object.getMetadata() : null;
-                XMLGregorianCalendar createdCal = metadata != null ? metadata.getCreateTimestamp() : null;
-                final Date created;
-                if (createdCal != null) {
-                    created = createdCal.toGregorianCalendar().getTime();
-//                    cellItem.add(AttributeModifier.replace("title", WebComponentUtil.getLocalizedDate(created, DateLabelComponent.LONG_MEDIUM_STYLE)));
-//                    cellItem.add(new TooltipBehavior());
-                } else {
-                    created = null;
-                }
-                cellItem.add(new Label(componentId, new IModel<String>() {
-                    @Override
-                    public String getObject() {
-                        return WebComponentUtil.getShortDateTimeFormattedValue(created, pageBase);
-                    }
-                }));
+
+                cellItem.add(new Label(componentId, (IModel<String>) () -> createCaseOpenTimestampModel(rowModel, pageBase)));
             }
 
             @Override
@@ -836,22 +854,8 @@ public class ColumnUtils {
                 @Override
                 public void populateItem(Item<ICellPopulator<SelectableBean<CaseType>>> cellItem,
                         String componentId, final IModel<SelectableBean<CaseType>> rowModel) {
-                    CaseType object = rowModel.getObject().getValue();
-                    XMLGregorianCalendar closedCal = object != null ? object.getCloseTimestamp() : null;
-                    final Date closed;
-                    if (closedCal != null) {
-                        closed = closedCal.toGregorianCalendar().getTime();
-                        cellItem.add(AttributeModifier.replace("title", WebComponentUtil.getLocalizedDate(closed, DateLabelComponent.LONG_MEDIUM_STYLE)));
-                        cellItem.add(new TooltipBehavior());
-                    } else {
-                        closed = null;
-                    }
-                    cellItem.add(new Label(componentId, new IModel<String>() {
-                        @Override
-                        public String getObject() {
-                            return WebComponentUtil.getShortDateTimeFormattedValue(closed, pageBase);
-                        }
-                    }));
+
+                    cellItem.add(new Label(componentId, (IModel<String>) () -> createCaseClosedTimestampLabel(rowModel, pageBase)));
                 }
 
                 @Override
@@ -941,6 +945,33 @@ public class ColumnUtils {
         return columns;
     }
 
+    private static String createCaseClosedTimestampLabel(IModel<SelectableBean<CaseType>> rowModel, PageBase pageBase) {
+        CaseType object = rowModel.getObject().getValue();
+        XMLGregorianCalendar closedCal = object != null ? object.getCloseTimestamp() : null;
+        final Date closed;
+        if (closedCal != null) {
+            closed = closedCal.toGregorianCalendar().getTime();
+//            cellItem.add(AttributeModifier.replace("title", WebComponentUtil.getLocalizedDate(closed, DateLabelComponent.LONG_MEDIUM_STYLE)));
+//            cellItem.add(new TooltipBehavior());
+        } else {
+            closed = null;
+        }
+        return WebComponentUtil.getShortDateTimeFormattedValue(closed, pageBase);
+    }
+
+    private static String createCaseOpenTimestampModel(IModel<SelectableBean<CaseType>> rowModel, PageBase pageBase) {
+        CaseType object = rowModel.getObject().getValue();
+        MetadataType metadata = object != null ? object.getMetadata() : null;
+        XMLGregorianCalendar createdCal = metadata != null ? metadata.getCreateTimestamp() : null;
+        final Date created;
+        if (createdCal != null) {
+            created = createdCal.toGregorianCalendar().getTime();
+        } else {
+            created = null;
+        }
+        return WebComponentUtil.getShortDateTimeFormattedValue(created, pageBase);
+    }
+
     private static void processCaseOutcome(CaseType caseType, Map<DisplayType, Integer> map, boolean useNullAsOne) {
         if (caseType == null) {
             return;
@@ -996,11 +1027,11 @@ public class ColumnUtils {
     }
 
     public static AbstractColumn<SelectableBean<CaseType>, String> createCaseActorsColumn(PageBase pageBase) {
-        return new AbstractColumn<SelectableBean<CaseType>, String>(createStringResource("pageCases.table.actors")) {
+        return new AbstractColumn<>(createStringResource("pageCases.table.actors")) {
             @Override
             public void populateItem(Item<ICellPopulator<SelectableBean<CaseType>>> item, String componentId, IModel<SelectableBean<CaseType>> rowModel) {
                 CaseType caseInstance = rowModel != null ? rowModel.getObject().getValue() : null;
-                item.add(getMultilineLinkPanel(componentId, getActorsForCase(rowModel != null ? rowModel.getObject().getValue() : null), pageBase));
+                item.add(getMultilineLinkPanel(componentId, getActorsForCase(caseInstance), pageBase));
             }
         };
     }
@@ -1011,7 +1042,7 @@ public class ColumnUtils {
         if (referencesList != null) {
             referencesList.forEach(reference -> {
                 AjaxLinkPanel referenceAjaxLinkPanel = new AjaxLinkPanel(multilineLinkPanel.newChildId(),
-                        Model.of(WebModelServiceUtils.resolveReferenceName(reference, pageBase, true))) {
+                        Model.of(WebModelServiceUtils.resolveReferenceName(reference.clone(), pageBase, true))) {
                     private static final long serialVersionUID = 1L;
 
                     @Override
@@ -1041,15 +1072,19 @@ public class ColumnUtils {
         if (caseType != null) {
             List<CaseWorkItemType> caseWorkItemTypes = caseType.getWorkItem();
             for (CaseWorkItemType caseWorkItem : caseWorkItemTypes) {
-                actorsList.addAll(getActorsForWorkitem(caseWorkItem, CaseTypeUtil.isClosed(caseType)));
+                actorsList.addAll(
+                        getActorsForWorkitem(caseWorkItem, CaseTypeUtil.isClosed(caseType)));
             }
         }
+        // Note that this makes the parent case object inconsistent. Hopefully it will be thrown away anyway.
+        actorsList.forEach(a -> a.asReferenceValue().clearParent());
         return actorsList;
     }
 
     private static List<ObjectReferenceType> getActorsForWorkitem(CaseWorkItemType workItem, boolean isClosed) {
         if (isClosed) {
-            return Collections.singletonList(workItem.getPerformerRef());
+            ObjectReferenceType performerRef = workItem.getPerformerRef();
+            return performerRef != null ? List.of(performerRef) : List.of();
         } else if (workItem.getAssigneeRef() != null && !workItem.getAssigneeRef().isEmpty()) {
             return workItem.getAssigneeRef();
         } else {
